<resources>
    <string name="app_name">FIIPs1</string>
    <string name="tv_start_text">Start</string>
    <string name="tv_email_text">Email *</string>
    <string name="tv_pass_text">Password *</string>
    <string name="tv_age_text">Age *</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_resest_creds_text">Reset credentials</string>
    <string name="btn_register_text">Register</string>
    <string name="login_activity">Login Activity</string>
    <string name="register_activity">Register Activity</string>
    <string name="login_success">GG! Login bun!</string>
    <string name="contacts_activity">Contacts</string>
    <string name="dummy_text">Dummy text</string>
    <string name="preference_login_file_key">com.example.riordachioaia.fiips1.PREF_LOGIN_FILE_KEY</string>
    <string name="contact_details_activity">Contact details</string>
    <string name="btn_new_contact_text">Add contact</string>
    <string name="contact_name_tv">Name</string>
    <string name="contact_group_tv">Group</string>
    <string name="contact_phone_tv">Phone</string>
    <string name="contact_surname_tv">Surname</string>
    <string name="btn_contact_save_text">Save</string>
    <string name="btn_download_contacts_text">DOWNLOAD</string>
    <string name="search_title">Seach contact</string>
    <string name="search_hint">search in contacts</string>
    <string name="delete_title">Delete</string>
</resources>
